Removed status from base member
