# src/main/java/com/bernardomg/association/member/adapter/outbound/rest/controller/MemberController.java
@@ -32,7 +32,6 @@ import org.springframework.web.bind.annotation.RestController;
 import com.bernardomg.association.member.adapter.outbound.rest.model.MemberDtoMapper;
 import com.bernardomg.association.member.domain.filter.MemberFilter;
 import com.bernardomg.association.member.domain.model.Member;
-import com.bernardomg.association.member.domain.model.MemberStatus;
 import com.bernardomg.association.member.usecase.service.MemberService;
 import com.bernardomg.data.domain.Page;
 import com.bernardomg.data.domain.Pagination;
@@ -43,7 +42,6 @@ import com.bernardomg.security.permission.domain.constant.Actions;
 import com.bernardomg.ucronia.openapi.api.MemberApi;
 import com.bernardomg.ucronia.openapi.model.MemberPageResponseDto;
 import com.bernardomg.ucronia.openapi.model.MemberResponseDto;
-import com.bernardomg.ucronia.openapi.model.MemberStatusDto;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Min;
@@ -73,23 +71,16 @@ public class MemberController implements MemberApi {
     @RequireResourceAuthorization(resource = "MEMBER", action = Actions.READ)
     public MemberPageResponseDto getAllMembers(@Min(1) @Valid final Integer page, @Min(1) @Valid final Integer size,
             @Valid final List<@Pattern(regexp = "^(firstName|lastName|number)\\|(asc|desc)$") String> sort,
-            @Valid final MemberStatusDto status, @Valid final String name) {
+            @Valid final String name) {
         final Pagination   pagination;
         final Sorting      sorting;
         final Page<Member> members;
-        final MemberStatus memberStatus;
         final MemberFilter filter;
 
         pagination = new Pagination(page, size);
         sorting = WebSorting.toSorting(sort);
 
-        // TODO: require members permission or filter only by active
-        if (status != null) {
-            memberStatus = MemberStatus.valueOf(status.name());
-        } else {
-            memberStatus = null;
-        }
-        filter = new MemberFilter(memberStatus, name);
+        filter = new MemberFilter(name);
 
         members = service.getAll(filter, pagination, sorting);
 
